// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer given \`socialMedia\` should render a inline social media list and an email 1`] = `
<div
  className="socialMedia inline"
>
  <SocialIconList
    socialMedia={
      Array [
        Object {
          "icon": Object {
            "name": "githubIcon",
          },
          "url": "http://github.com",
        },
        Object {
          "icon": Object {
            "name": "facebookIcon",
          },
          "url": "http://facebook.com",
        },
        Object {
          "icon": Object {
            "name": "twitterIcon",
          },
          "url": "http://twitter.com",
        },
      ]
    }
  />
  <a
    className="email"
    href="mailto:fairviewrobotics@gmail.com"
  >
    FAIRVIEWROBOTICS@GMAIL.COM
  </a>
</div>
`;

exports[`Footer given \`socialMedia\` should render a social media list and an email 1`] = `
<div
  className="socialMedia inline"
>
  <SocialIconList
    socialMedia={
      Array [
        Object {
          "icon": Object {
            "name": "githubIcon",
          },
          "url": "http://github.com",
        },
        Object {
          "icon": Object {
            "name": "facebookIcon",
          },
          "url": "http://facebook.com",
        },
        Object {
          "icon": Object {
            "name": "twitterIcon",
          },
          "url": "http://twitter.com",
        },
      ]
    }
  />
  <a
    className="email"
    href="mailto:fairviewrobotics@gmail.com"
  >
    FAIRVIEWROBOTICS@GMAIL.COM
  </a>
</div>
`;

exports[`Footer when \`fixed\` should render an absolute positioned list 1`] = `
<div
  className="socialMedia absolute"
>
  <SocialIconList
    socialMedia={Array []}
  />
  <a
    className="email"
    href="mailto:fairviewrobotics@gmail.com"
  >
    FAIRVIEWROBOTICS@GMAIL.COM
  </a>
</div>
`;
